Re-structure docs/openapi.yaml a bit so machine access endpoints are in their own section, add endpoints for machines to read their own schedule and tasks, and change records endpoint so machine doesn't need to know its own id
