# internal/api/request_handlers.go
@@ -596,6 +596,44 @@ func (h *handler) readMachineSchedule(w http.ResponseWriter, req *http.Request) 
 	})
 }
 
+func (h *handler) readMachineOwnSchedule(w http.ResponseWriter, req *http.Request, _ *types.Machine) {
+	defer req.Body.Close()
+
+	vars := mux.Vars(req)
+	orgID := sanitizeParameter(vars[orgIDKey])
+	machineID := sanitizeParameter(vars[machineIDKey])
+
+	m, err := h.d.ReadMachine(machineID)
+	if err != nil {
+		_ = encodeNotFoundResponse(w)
+		return
+	}
+
+	o, err := h.d.ReadOrganization(orgID)
+	if err != nil {
+		_ = encodeNotFoundResponse(w)
+		return
+	}
+	if m.OrganizationID != o.ID {
+		_ = encodeNotFoundResponse(w)
+		return
+	}
+
+	sched, err := h.d.ReadSchedule(m.Name)
+	if err != nil {
+		_ = encodeNotFoundResponse(w)
+		return
+	}
+
+	schedule := dbconverter.ConvertSchedule(sched)
+
+	_ = encodeResponse(w, Response{
+		Code:    http.StatusOK,
+		Message: "ok",
+		Payload: &schedule,
+	})
+}
+
 func (h *handler) updateMachineSchedule(w http.ResponseWriter, req *http.Request) {
 	defer req.Body.Close()
 
@@ -872,6 +910,36 @@ func (h *handler) readTask(w http.ResponseWriter, req *http.Request) {
 }
 
 func (h *handler) readTasks(w http.ResponseWriter, req *http.Request) {
+	defer req.Body.Close()
+
+	vars := mux.Vars(req)
+	orgID := sanitizeParameter(vars[orgIDKey])
+
+	o, err := h.d.ReadOrganization(orgID)
+	if err != nil {
+		_ = encodeNotFoundResponse(w)
+		return
+	}
+
+	tasks := make([]types.Task, 0, len(o.Tasks))
+	for i := range o.Tasks {
+		t, err := h.d.ReadTask(o.Tasks[i].Name)
+		if err != nil {
+			continue
+		}
+
+		task := dbconverter.ConvertTask(t)
+		tasks = append(tasks, task)
+	}
+
+	_ = encodeResponse(w, Response{
+		Code:    http.StatusOK,
+		Message: "ok",
+		Payload: &tasks,
+	})
+}
+
+func (h *handler) readMachineTasks(w http.ResponseWriter, req *http.Request, _ *types.Machine) {
 	defer req.Body.Close()
 
 	vars := mux.Vars(req)
